2005-01-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/strtol.c: Dmitry Xmelkov's fixes and speedups
	for strtol and strtoul (check base against legal values,
	correctly report ERANGE on under-/overflow, avoid costly
	division for common base values, parse string "0x" correctly
	as 0 with returning the "x" as final string); bugfix for
	savannah bug  #11494, and savannah patch #3618.
	* libc/stdlib/strtoul.c: Ditto.
	* AUTHORS: Mention Dmitry Xmelkov for his contribution.

2005-01-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/acknowledge.dox: Mention Ted Roth, fix Eric's
	email address.
	* doc/api/tools-install.dox: Remove all explicit version
	numbers, recommend the latest released version instead.
	* doc/api/faq.dox: minor cleanup to the ROM string example.

2005-01-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/realloc.c: Do not mess with "nx" pointers for
	the current entry as it is not really of struct __freelist.
	Fixes savannah bug #11684.

2005-01-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Implement savannah patch #3516: %S format for printf().
	* AUTHORS: Mention Helmut Wallner for his contribution.
	* include/stdio.h: Document the new %S format.
	* include/avr/pgmspace.h: Prototype for new strnlen_P() function.
	* libc/pmstring/Makefile.am: Include strnlen_P.S.
	* libc/stdio/vfprintf.c: Add implementation for %S.

2005-01-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/setjmp.h: Document that longjmp() might destroy global
	register variables; see savannah bug #4101.

2005-01-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/eeprom.h: Document all devices that are not supported
	by the library routines; add a #warning as well.

2005-01-12  Eric B. Weddington  <ericw@evcohs.com>

    * LICENSE: Update copyright year.

2005-01-10  Eric B. Weddington  <ericw@evcohs.com>

    * include/avr/wdt.h: Rewrite wdt_disable() to match datasheet algorithm.
    [Fix for bug #11522]
    * NEWS: Update bugs fixed list.
