@@ -1,8 +1,9 @@
-#include <progmem.h>
+#include <avr/pgmspace.h>
+#include <stdio.h>
 
 /*
   You can put data in program memory,
-  but reading this data allowed only through macro `PRG_RDB'
+  but reading this data allowed only through macro `pgm_read_byte'
 */
 
 
@@ -15,18 +16,17 @@ prog_long l[] = {1,2,3,4,5}; /* This 32bit array in program memory. */
 
 prog_long_long ll[] = {1,2,3,4,5}; /* This 64bit array in program memory. */
 
-char a[] __attribute__ ((progmem)) = "This string in program memory too";
+char a[] PROGMEM = "This string in program memory too";
 
 void
 foo(void)
 {
   char *p = PSTR ("This string in program memory");
   
-  printf (PSTR ("This string in program memory")); /* special version of
-						      printf needed ! */
+  printf_P (PSTR ("This string in program memory"));
   
-  char c = PRG_RDB (p+5);	/* c = 's' */
-  char aa = PRG_RDB (&a[10]);	/* aa = 'g' */
-  char bb = PRG_RDB (&b[3]);	/* bb = 4 */
+  char c = pgm_read_byte (p+5);	/* c = 's' */
+  char aa = pgm_read_byte (&a[10]);	/* aa = 'g' */
+  char bb = pgm_read_byte (&b[3]);	/* bb = 4 */
   
 }
